# tgui

./: .gitignore  AGENTS.md  AGENT_INDEX.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  build.rs  publish.bat
.trae/documents/: 实现控件渲染功能.md  实现文本渲染功能.md
examples/: README.md  animation_showcase.rs  basic_window.rs  font.rs  input.rs  layout.rs  layout_theme_showcase.rs  mvvm_counter.rs  new_window.rs  theme.rs  timeline_controller.rs  widgets_showcase.rs
examples/android_basic_window/: Cargo.toml  README.md
examples/android_basic_window/src/: lib.rs
examples/animation_showcase/: Cargo.toml
examples/animation_showcase/src/: main.rs
examples/background_effects/: Cargo.toml
examples/background_effects/src/: main.rs
examples/basic_window/: Cargo.toml
examples/basic_window/src/: main.rs
examples/canvas/: Cargo.toml
examples/canvas/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/dialogs/src/: main.rs
examples/frameless_window/: Cargo.toml
examples/frameless_window/src/: main.rs
examples/image_example/: Cargo.toml
examples/image_example/src/: main.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/layout/: Cargo.toml
examples/layout/src/: main.rs
examples/layout_theme_showcase/: Cargo.toml
examples/layout_theme_showcase/src/: main.rs
examples/media_showcase/: Cargo.toml
examples/media_showcase/src/: main.rs
examples/multi_page_showcase/: Cargo.toml
examples/multi_page_showcase/src/: main.rs
examples/multi_page_showcase/src/pages/: basic.rs  canvas.rs  media.rs  mod.rs
examples/multi_window/src/: main.rs
examples/multiple_vm_examples/: Cargo.toml
examples/multiple_vm_examples/src/: main.rs
examples/multiple_vm_examples/src/pages/: home_page.rs  settings_page.rs
examples/mvvm_counter/: Cargo.toml
examples/mvvm_counter/src/: main.rs
examples/ohos_basic_window/: Cargo.toml  ohos-app.toml
examples/ohos_basic_window/src/: lib.rs
examples/scroll/: Cargo.toml
examples/scroll/src/: main.rs
examples/theme/: Cargo.toml
examples/theme/src/: main.rs
examples/timeline_controller/: Cargo.toml
examples/timeline_controller/src/: main.rs
examples/video_controller/: Cargo.toml
examples/video_controller/src/: main.rs
examples/video_surface/: Cargo.toml
examples/video_surface/src/: main.rs
examples/widgets_showcase/: Cargo.toml
examples/widgets_showcase/src/: main.rs
skills/tgui-developer/: SKILL.md
skills/tgui-developer/agents/: openai.yaml
skills/tgui-developer/references/: project-map.md
src/: animation.rs  dialog.rs  font.rs  lib.rs  log.rs  notification.rs  platform.rs  runtime.rs
src/application/: mod.rs
src/foundation/: binding.rs  color.rs  error.rs  event.rs  mod.rs  view_model.rs  window_control.rs
src/graphics/: canvas2d.rs  mod.rs
src/gui/: mod.rs
src/gui/core/: canvas.rs  mod.rs
src/gui/renderers/: mod.rs  text_renderer.rs
src/gui/style/: mod.rs
src/gui/style/core/: border.rs  color.rs  mod.rs  padding.rs
src/gui/widgets/: button.rs  mod.rs  panel.rs  text.rs
src/media/: browser_pipeline.rs  mod.rs
src/reactive/: mod.rs  signal.rs
src/rendering/: renderer.rs
src/rendering/shader/: backdrop_blur.wgsl  backdrop_composite.wgsl  brush.wgsl  mesh.wgsl  rect.wgsl  text.wgsl
src/runtime/: mod.rs  renderer.rs
src/text/: font.rs
src/ui/: box_layout.rs  button.rs  column.rs  layout.rs  mod.rs  node.rs  row.rs  scene.rs  text.rs  theme.rs  unit.rs  widget.rs
src/ui/theme/: color.rs  mod.rs  mode.rs  motion.rs  shape.rs  spacing.rs  state.rs  store.rs  theme.rs  typography.rs
src/ui/theme/component/: button.rs  checkbox.rs  dialog.rs  input.rs  mod.rs  panel.rs  radio.rs  scrollbar.rs  select.rs  switch.rs  text.rs  tooltip.rs
src/ui/widget/: background.rs  button.rs  canvas.rs  checkbox.rs  common.rs  container.rs  core.rs  image.rs  input.rs  mod.rs  radio.rs  select.rs  switch.rs  text.rs  video.rs
src/video/: controller.rs  mod.rs  types.rs
src/video/backend/: ffmpeg.rs  mod.rs
src/video/backend/ffmpeg/: audio.rs  decode.rs  mod.rs  present.rs
