[package]
name = "tgui"
version = "0.1.2"
authors = ["a2542209451@gmail.com"]
edition = "2021"
description = "A modern, GPU-accelerated Rust GUI framework with MVVM, Taffy layout, and wgpu rendering."
license = "MIT"
repository = "https://github.com/nandebishitaoyuan/tgui.git"
readme = "README.md"
keywords = ["gui", "graphics", "wgpu", "ui"]
categories = ["gui", "rendering"]

exclude = [
    "target/*",
    "*.png",
    "*.ttf",
    "assets/*",
    ".github/*",
    "examples/*",
]

[features]
default = []
android = []
ohos = []

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
cosmic-text = "0.18"
dpi = "0.1.2"
pollster = "0.4"
taffy = "0.10"
unicode-segmentation = "1.12"
winit-core = "0.31.0-beta.2"
wgpu = { version = "29", features = ["wgsl"] }

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6"
log = "0.4.29"
winit-win32 = "0.31.0-beta.2"

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.6"
log = "0.4.29"
winit-appkit = "0.31.0-beta.2"

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
arboard = "3.6"
log = "0.4.29"
winit-wayland = "0.31.0-beta.2"
winit-x11 = "0.31.0-beta.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
winit-android = { version = "0.31.0-beta.2", features = ["native-activity"] }

[target.'cfg(target_env = "ohos")'.dependencies]
raw-window-handle = "0.6"
tgui-winit-ohos = "0.31.0-beta.2"
