[package]
name = "tgui"
version = "0.1.7"
authors = ["a2542209451@gmail.com"]
edition = "2021"
description = "A modern, GPU-accelerated Rust GUI framework with MVVM, Taffy layout, and wgpu rendering."
license = "MIT"
repository = "https://github.com/nandebishitaoyuan/tgui.git"
readme = "README.md"
keywords = ["gui", "graphics", "wgpu", "ui"]
categories = ["gui", "rendering"]

exclude = [
    "target/*",
    "*.png",
    "*.ttf",
    "assets/*",
    ".github/*",
    "examples/*",
    "AGENTS.md",
    "skills/*"
]

[features]
default = []
android = []
ohos = []
video = ["dep:ffmpeg-next"]
video-static = ["video", "ffmpeg-next/static"]

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
cosmic-text = "0.19"
crossbeam-channel = "0.5"
dpi = "0.1.2"
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "gif", "webp", "bmp"] }
geo = "0.33"
lyon = "1.0"
pollster = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls-no-provider"] }
resvg = "0.47"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
taffy = "0.10"
unicode-segmentation = "1.12"
usvg-remote-resolvers = { version = "0.2", features = ["reqwest_blocking"] }
winit-core = "0.31.0-beta.2"
wgpu = { version = "29", features = ["wgsl"] }
ffmpeg-next = { version = "8.0.0", optional = true, default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"] }

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6"
cpal = "0.17.1"
log = "0.4.29"
raw-window-handle = "0.6"
rfd = "0.17"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Imaging", "Win32_System_Com"] }
winit-win32 = "0.31.0-beta.2"

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.6"
cpal = "0.17.1"
log = "0.4.29"
raw-window-handle = "0.6"
rfd = "0.17"
winit-appkit = "0.31.0-beta.2"

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
arboard = "3.6"
cpal = "0.17.1"
log = "0.4.29"
raw-window-handle = "0.6"
rfd = "0.17"
winit-wayland = "0.31.0-beta.2"
winit-x11 = "0.31.0-beta.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
winit-android = { version = "0.31.0-beta.2", features = ["native-activity"] }

[target.'cfg(target_env = "ohos")'.dependencies]
hilog-sys = "0.1.7"
raw-window-handle = "0.6"
tgui-winit-ohos = "0.4.11"
#tgui-winit-ohos = { path = "../winit-ohos" }
